# tablespam

./: .buildinfo  .gitignore  README.md  README.qmd  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tablespam.Excel.html  tablespam.GT.html  tablespam.html
.github/workflows/: documentation.yml  python-package.yml
_sources/: index.rst.txt  modules.rst.txt  tablespam.GT.rst.txt  tablespam.rst.txt
docs/: conf.py  tablespam.Excel.rst
tablespam/: Entry.py  Formulas.py  TableSpam.py  __init__.py  as_excel.py  as_gt.py  as_string.py
tablespam/Data/: mtcars.py
tablespam/Excel/: as_excel.py  write_excel.py  xlsx_styles.py
tablespam/Excel/_as_excel/: as_excel.py  create_test_files.py  locations.py
tablespam/GT/_as_gt/: as_gt.py
tests/: test_1.py  test_excel.py  test_formula.py  test_gt.py  test_string.py
tests/data/: cars.xlsx  cars_additional_spanners.xlsx  cars_additional_spanners_left_right.xlsx  cars_cell_styles.xlsx  cars_color_1.xlsx  cars_color_2.xlsx  cars_complex_merge.xlsx  cars_data_styles.xlsx  cars_missing_rownames.xlsx  cars_no_row_names.xlsx  cars_no_titles.xlsx  cars_no_titles_no_footnote.xlsx  cars_offset.xlsx
