[tool.poetry]
name = "tablespam"
version = "0.1.1"
description = ""
authors = ["Jannik Orzek <jannik.orzek@mailbox.org>", "Christoph Koch"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyparsing = "^3.2.0"
polars = "^1.17.1"
great-tables = "^0.15.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
